expense item - text overflow fixed

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -323,6 +323,10 @@ body #app {
   .expense-item-title {
     font-size: 20px;
     margin-left: 20px;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
   }
 
   .expense-item-date {
